# bezier-rs

./: Cargo.toml  README.md
experiments/: bezier-least-square-fit-convergence-comparison-plot.rs  openclip20K_parse.rs
experiments/eq/: READMD.md  bezier_curves.smt2  bezier_curves_z3.py
src/: error.rs  lib.rs
src/data/: curve.rs  format.rs  macros.rs  mod.rs  segment.rs
src/modules/: mod.rs
src/modules/eq/: mod.rs  smt_eq.rs
src/modules/export/: mod.rs  svg.rs  svg_path.rs
src/modules/fit/: alternating_least_square_fit.rs  least_square_fit.rs  least_square_fit_common.rs  least_square_fit_new.rs  least_square_fit_weak_varpro.rs  mod.rs  t_heuristic.rs
src/modules/parse/: json.rs  mod.rs  svg_path.rs
tests/integration_tests/: mod.rs  workflow_test.rs
