[package]
name = "bezier-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
nalgebra = "0.32"
svg = "0.13"

[dev-dependencies]
approx = "0.5.1"

# draw a comparison of the different least square fit method
[[bin]]
name = "bezier-least-square-fit-convergence-comparison-plot"
path = "experiments/bezier-least-square-fit-convergence-comparison-plot.rs"

