[package]
name = "bezier-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = "0.32.3"
rand = "0.8.5"
rand_distr = "0.4.3"
plotters = "0.3.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
approx = "0.5.1"

# draw a comparison of the different least square fit method
[[bin]]
name = "bezier-least-square-fit-convergence-comparison-plot"
path = "experiments/bezier-least-square-fit-convergence-comparison-plot.rs"
test = false

